// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PageListTemplate /> > should render pages 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10 flex flex-col"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10 mb-auto"
    >
       
      <header
        class="_header_be6ffb"
      >
        <h1
          class="_headerTitle_be6ffb font-extrabold my-auto mx-0 text-center"
        >
          Pages
        </h1>
      </header>
      <div
        class="_content_69eda7 flex flex-col max-w-screen-md"
      >
        <ul>
          <li>
            <h2>
              Test Page With Embedded Image-test page-local
            </h2>
            <a
              class="_link_69eda7 underline"
              href="/pages/test-page-embedded-image-test-page-local"
            >
              Read more →
            </a>
          </li>
          <li>
            <h2>
              My Page-preview test
            </h2>
            <a
              class="_link_69eda7 underline"
              href="/pages/my-page-preview-test"
            >
              Read more →
            </a>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/"
            >
              Home
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10 my-0 mx-auto"
        >
          © 2023 Built with 
          <a
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PageTemplate /> > should render a page 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10 flex flex-col"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10 mb-auto"
    >
      <article
        class="_container_01b1ad flex flex-col max-w-screen-md"
      >
        <h1
          class="_containerTitle_01b1ad font-extrabold mb-6"
        >
          Test Page With Embedded Image-test page-local
        </h1>
        <a
          class="font-normal"
          href="/pages"
        >
          Pages →
        </a>
        <div
          class="_content_01b1ad"
        >
          <p>
            <img
              alt="Drupal on NPM"
              data-entity-type="file"
              data-entity-uuid="85adb65f-7111-42ae-aaa2-1d82e92d5785"
              height="968"
              loading="lazy"
              src="/sites/default/files/inline-images/%40drupal-npm.png"
              width="3138"
            />
          </p>
        </div>
      </article>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/"
            >
              Home
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10 my-0 mx-auto"
        >
          © 2023 Built with 
          <a
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
